--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
   <canvas id="renderCanvas" style="width: 100%; height: 100%;"></canvas>
-  <script type="module" src="/dist/bundle.js"></script>
+  <script type="module" src="/bundle.js"></script>
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/service-worker.js');
+    }
+  </script>
 </body>
 </html>
